.kube/bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot
  template:
    metadata:
      labels:
        app: bot
    spec:
      imagePullSecrets:
          - name: dockerregistry
      containers:
      - name: bot
        image: moonlization/bot:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bot
spec:
  selector:
    app: bot
  ports:
    - protocol: TCP
      port: 5010
      targetPort: 8080
